--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+<style>
 body {
   font-family: Arial, sans-serif;
   background: #f4f6f8;
@@ -74,6 +75,7 @@ button {
   padding: 20px;
   width: 90%;
   max-width: 400px;
+    </style>
 }
 <script>
 
