--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@ button {
   margin: 10% auto;
   padding: 20px;
   width: 90%;
-  max-width: 400px;
-    </style>
+  max-width: 400px;</style>
 }
 <script>
 
